# Stasis

./: .gitignore  CNAME  PROJECT_GUIDE.md  README.md  activity_logger.py  build.ps1  config_loader.py  index.html  logger.py  main.py  mkdocs.yml  requirements.txt  secure_config.py  stasis-backend.spec  system_status.py  telegram_client.py  update_manager.py  webcam.py
.github/workflows/: auto-pr-dev-to-master.yml  automerge-dev-pr.yml  build-and-release.yml  build-installer.yml  ci-dev.yml  ci-master.yml  deploy-pages.yml  static.yml
builds/: Stasis.spec
docs/: api-reference.md  architecture.md  configuration.md  database.md  developer-guide.md  index.md  installation.md  privacy-policy.md  telegram.md
docs/stylesheets/: extra.css
frontend/: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: App.jsx  LoadingScreen.jsx  SettingsPage.jsx  WellbeingDashboard.jsx  index.css  main.jsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/nsis/: installer.nsh  installer.nsi  license.txt  privacy.txt
frontend/src-tauri/src/: lib.rs  main.rs
installer/: config.template.json  installer.iss  license.txt
src/: main.py
src/analytics/: daily_summary.py  daily_wellbeing.py
src/api/: activity_routes.py  api_server.py  danger_routes.py  dashboard_routes.py  focus_routes.py  goals_routes.py  health_routes.py  limits_routes.py  report_routes.py  settings_routes.py  spark_routes.py  stats_routes.py  (+4 more)
web/: index.html
(+61 files in other folders)
