[package]
name = "stasis"
version = "2.4.1"
description = "Stasis Desktop App"
authors = ["you"]
edition = "2021"

[lib]
name = "stasis_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
